# MIDIAnimator

./: .gitignore  CODE_OF_CONDUCT.md  Laser.py  README.md  VibeUpDown.py  __init__.py  drumstick_RaidentEnsemble.py  drumsticks.py  four-way-perc.py  hi-hats.py  noteOff.py  noteOffData.py  readthedocs.yaml  test_op.py  test_panel.py  vibraphone.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create-zip-file.yml  get_name.py
MIDIAnimator/: __init__.py
MIDIAnimator/data_structures/: __init__.py  midi.py
MIDIAnimator/libs/: __init__.py
MIDIAnimator/src/: MIDIAnimation.py  MIDIFile.py  MIDINode.py  MIDIStructure.py  Note.py  __init__.py  (+3 more)
custom_animation_files/: Laser.py  VibeUpDown.py  drums.py  drumstick_RaidentEnsemble.py  drumsticks.py  four-way-perc.py  hi-hats.py  noteOff.py  vibraphone.py
docs/: Makefile  README.md  build_api_docs.py  conf.py  index.md  make.py  requirements.txt
rust-impl/midianimator/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
rust-impl/midianimator/src-tauri/capabilities/: migrated.json
rust-impl/midianimator/src-tauri/node_registry/: Cargo.toml
rust-impl/midianimator/src-tauri/node_registry/src/: lib.rs
rust-impl/midianimator/src-tauri/src/: auto_commands.rs  build_scene.rs  lib.rs  main.rs
rust-impl/midianimator/src-tauri/src/api/: build_scene.rs  event.rs  javascript.rs  midi.rs  mod.rs
rust-impl/midianimator/src-tauri/src/blender/: mod.rs  scene_data.rs
rust-impl/midianimator/src-tauri/src/blender/python/: blender_scene_builder.py  blender_scene_sender.py  blender_scene_writer.py  dfs_execute.py
rust-impl/midianimator/src-tauri/src/command/: event.rs  javascript.rs  mod.rs
rust-impl/midianimator/src-tauri/src/configs/: default_nodes.json  keybinds.json  settings.json
rust-impl/midianimator/src-tauri/src/graph/: execute.rs  mod.rs  types.rs
rust-impl/midianimator/src-tauri/src/graph/executors/: animation.rs  assign_midi_notes_to_objects.md  midi.rs  mod.rs  nodes_and_backend.md  scene.rs  utils.rs
rust-impl/midianimator/src-tauri/src/ipc/: ipc.md  mod.rs
rust-impl/midianimator/src-tauri/src/midi/: mod.rs
rust-impl/midianimator/src-tauri/src/scene_generics/: mod.rs
rust-impl/midianimator/src-tauri/src/state/: mod.rs  state.md
rust-impl/midianimator/src-tauri/src/structures/: ipc.rs  midi.rs  mod.rs  node.rs  state.md  state.rs
rust-impl/midianimator/src-tauri/src/ui/: keybinds.rs  menu.rs  mod.rs
rust-impl/midianimator/src-tauri/src/utils/: animation.rs  gm_instrument_map.rs  mod.rs  ui.rs
rust-impl/midianimator/src-tauri/tests/: ipc_test.rs  midi_test.rs  test_midi_type_0_rs_4_14_24.mid  test_midi_type_1_rs_4_14_24.mid
src/: MIDIAnimator.py  MIDINode.py  __init__.py  functions.py
tests/: main.py  read_file.py  two_notes_CC_simple.mid
ui/: test_panel.py
utils/: __init__.py  functions.py
(+91 files in other folders)
