[package]
name = "MIDIAnimator"
version = "0.5.0"
description = "Procedurally animate a MIDI file. version beta5"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/jamesa08/MIDIAnimator"
default-run = "MIDIAnimator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
regex = "*"
walkdir = "2.3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = ["api-all"] }
regex = "1.5.4"
lazy_static = "1.4.0"
midly = "0.5.3"
uuid = "1.8.0"
once_cell = "1.19.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-recursion = "1.1.1"
node_registry = { path = "./node_registry" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
